fixed spacing between profile name and edge

--- a/src/sass/pages/_person-profile.scss
+++ b/src/sass/pages/_person-profile.scss
@@ -20,6 +20,8 @@
   .name {
     font-size: 47px;
     margin-bottom: 20px;
+    box-sizing: border-box;
+    padding: 0 20px;
   }
 
   .position {
